Fix Title spacing

--- a/lab1/styles.css
+++ b/lab1/styles.css
@@ -12,7 +12,7 @@
 #section1, #section2 {
     display: inline-block;
     width: 100%; 
-    scroll-margin-top: 50px; 
+    scroll-margin-top: 136px; 
 }
 
 header {
